#187: Scenario outlines do not support dynamic parameters in the scenario name