@@ -6,10 +6,11 @@ import com.epam.ta.reportportal.ws.model.StartTestItemRQ;
 import com.github.invictum.reportportal.*;
 import com.google.inject.Inject;
 import io.reactivex.Maybe;
+import net.thucydides.model.domain.DataTableRow;
 import net.thucydides.model.domain.TestOutcome;
 import net.thucydides.model.domain.TestStep;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Recorder aware of parameterized BDD style test specific handling
@@ -32,16 +33,18 @@ public class BddDataDriven extends TestRecorder {
                 .withDescription(out.getUserStory().getNarrative())
                 .build();
         Maybe<String> id = suiteStorage.start(out.getUserStory().getId(), () -> launch.startTestItem(startStory));
+        final List<DataTableRow> dataRows = out.getDataTable().getRows();
+        final List<String> currentTestParams = dataRows.get(last).getStringValues();
         // Start test
         StartTestItemRQ startScenario = new StartEventBuilder(ItemType.STEP)
-                .withName(out.getName())
+                .withName(Utils.replacePlaceholders(out.getName(), currentTestParams))
                 .withStartTime(currentTest.getStartTime())
                 .withParameters(out.getDataTable().row(last))
                 .withTags(out.getTags())
                 .build();
         Maybe<String> testId = launch.startTestItem(id, startScenario);
         // Steps
-        proceedSteps(testId, Arrays.asList(currentTest));
+        proceedSteps(testId, List.of(currentTest));
         // Stop test
         FinishTestItemRQ finishScenario = new FinishEventBuilder()
                 .withStatus(Status.mapTo(currentTest.getResult()))
